[gd_scene load_steps=19 format=3 uid="uid://d0443y546r1ey"]

[ext_resource type="Script" uid="uid://b202c7mfdobk8" path="res://MiseryManager/Scripts/miserymanager.gd" id="1_ifxhs"]
[ext_resource type="Texture2D" uid="uid://jni2vrhvv4cy" path="res://Assets/backgrounds/miserymanagerapp.png" id="1_rlxtp"]
[ext_resource type="Script" uid="uid://d0fy2l68vwj3j" path="res://MiseryManager/Scripts/demon_info.gd" id="2_4dj6r"]
[ext_resource type="FontFile" uid="uid://c1bxnd8b2ug2u" path="res://Assets/font/Garet-Heavy.ttf" id="2_ataua"]
[ext_resource type="Theme" uid="uid://b68tpgef133gx" path="res://Assets/UI/default_theme.tres" id="3_3ulmy"]
[ext_resource type="Script" uid="uid://cb1umph1jxq0w" path="res://MiseryManager/Scripts/traits_list.gd" id="4_mksl1"]
[ext_resource type="PackedScene" uid="uid://bslcw8id8v5nc" path="res://MiseryManager/Scenes/traits.tscn" id="5_ekk6s"]
[ext_resource type="Script" uid="uid://ce63dv6m3lmfs" path="res://MiseryManager/Scripts/scheduled_task_list.gd" id="6_44pg8"]
[ext_resource type="PackedScene" uid="uid://brmwmlcqdohsw" path="res://MiseryManager/Scenes/task.tscn" id="6_ekk6s"]
[ext_resource type="Script" uid="uid://cdctw888ymj84" path="res://MiseryManager/Scripts/tasks_container.gd" id="6_mksl1"]
[ext_resource type="PackedScene" uid="uid://bm1i2exo4scyy" path="res://MiseryManager/Scenes/task_bar.tscn" id="7_fne2n"]
[ext_resource type="PackedScene" uid="uid://dnikjm5skrfrb" path="res://MiseryManager/Scenes/task_slot.tscn" id="7_omno3"]
[ext_resource type="Script" uid="uid://bdva1rre1n4h5" path="res://MiseryManager/Scripts/schedule.gd" id="8_qp4v8"]
[ext_resource type="Script" uid="uid://jd2x8hwlu6mp" path="res://MiseryManager/Scripts/submit_button.gd" id="11_0ltho"]

[sub_resource type="ImageTexture" id="ImageTexture_ijftj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dg7h3"]
bg_color = Color(0.352941, 0.313726, 0.239216, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0, 0, 0, 0.905882)
shadow_size = 3
shadow_offset = Vector2(3, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7ucjv"]
bg_color = Color(0.218019, 0.191131, 0.140004, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0, 0, 0, 0.905882)
shadow_size = 3
shadow_offset = Vector2(3, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ltho"]
bg_color = Color(0.536389, 0.493404, 0.0291, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0.219608, 0.192157, 0.141176, 0.858824)
shadow_size = 3
shadow_offset = Vector2(3, 2)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="MiseryManager" type="Control" parent="."]
unique_name_in_owner = true
anchors_preset = 0
offset_right = 1604.0
offset_bottom = 902.0
script = ExtResource("1_ifxhs")

[node name="TextureRect" type="TextureRect" parent="MiseryManager"]
layout_mode = 0
offset_right = 1600.0
offset_bottom = 900.0
texture = ExtResource("1_rlxtp")

[node name="MainLayout" type="HBoxContainer" parent="MiseryManager"]
layout_direction = 2
layout_mode = 0
offset_right = 1600.0
offset_bottom = 900.0

[node name="DemonInfo" type="Control" parent="MiseryManager/MainLayout" node_paths=PackedStringArray("misery_manager")]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
script = ExtResource("2_4dj6r")
blood_type = "C+"
misery_manager = NodePath("../..")

[node name="Portrait" type="TextureRect" parent="MiseryManager/MainLayout/DemonInfo"]
layout_mode = 0
offset_left = 26.0
offset_top = 147.0
offset_right = 226.0
offset_bottom = 347.0
texture = SubResource("ImageTexture_ijftj")
expand_mode = 1

[node name="Name" type="Label" parent="MiseryManager/MainLayout/DemonInfo"]
layout_mode = 0
offset_left = 33.0
offset_top = 71.0
offset_right = 437.0
offset_bottom = 127.0
theme_override_colors/font_color = Color(0.352941, 0.313726, 0.239216, 1)
theme_override_fonts/font = ExtResource("2_ataua")
theme_override_font_sizes/font_size = 50
text = "Name"
horizontal_alignment = 1

[node name="Dept" type="Label" parent="MiseryManager/MainLayout/DemonInfo"]
layout_mode = 0
offset_left = 324.0
offset_top = 150.0
offset_right = 501.0
offset_bottom = 180.0
theme = ExtResource("3_3ulmy")
theme_override_colors/font_color = Color(0.352941, 0.313726, 0.239216, 1)

[node name="BloodType" type="Label" parent="MiseryManager/MainLayout/DemonInfo"]
layout_mode = 0
offset_left = 395.0
offset_top = 206.0
offset_right = 500.0
offset_bottom = 234.0
theme = ExtResource("3_3ulmy")
theme_override_colors/font_color = Color(0.34902, 0.313726, 0.239216, 1)

[node name="MBTI" type="Label" parent="MiseryManager/MainLayout/DemonInfo"]
layout_mode = 0
offset_left = 326.0
offset_top = 259.0
offset_right = 499.0
offset_bottom = 289.0
theme = ExtResource("3_3ulmy")
theme_override_colors/font_color = Color(0.352941, 0.313726, 0.239216, 1)

[node name="Sign" type="Label" parent="MiseryManager/MainLayout/DemonInfo"]
layout_mode = 0
offset_left = 316.0
offset_top = 314.0
offset_right = 500.0
offset_bottom = 340.0
theme = ExtResource("3_3ulmy")
theme_override_colors/font_color = Color(0.352941, 0.313726, 0.239216, 1)

[node name="COD" type="Label" parent="MiseryManager/MainLayout/DemonInfo"]
layout_mode = 0
offset_left = 34.0
offset_top = 413.0
offset_right = 499.0
offset_bottom = 504.0
theme = ExtResource("3_3ulmy")
theme_override_colors/font_color = Color(0.352941, 0.313726, 0.239216, 1)
theme_override_constants/line_spacing = 1
autowrap_mode = 3

[node name="Sentence" type="Label" parent="MiseryManager/MainLayout/DemonInfo"]
layout_mode = 0
offset_left = 39.0
offset_top = 553.0
offset_right = 491.0
offset_bottom = 648.0
theme = ExtResource("3_3ulmy")
theme_override_colors/font_color = Color(0.352941, 0.313726, 0.239216, 1)
autowrap_mode = 3

[node name="Traits" type="VBoxContainer" parent="MiseryManager/MainLayout/DemonInfo"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.035
anchor_bottom = 0.01
offset_left = 22.0
offset_top = 690.0
offset_right = 485.0
offset_bottom = 800.0

[node name="TraitsList" type="FlowContainer" parent="MiseryManager/MainLayout/DemonInfo/Traits" node_paths=PackedStringArray("misery_manager")]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/h_separation = 30
theme_override_constants/v_separation = 20
last_wrap_alignment = 1
script = ExtResource("4_mksl1")
count = 3
traits_scene = ExtResource("5_ekk6s")
misery_manager = NodePath("../../../..")

[node name="Schedule" type="Control" parent="MiseryManager/MainLayout" node_paths=PackedStringArray("misery_manager")]
custom_minimum_size = Vector2(600, 900)
layout_mode = 2
size_flags_horizontal = 2
script = ExtResource("8_qp4v8")
target_task_count = 8
misery_manager = NodePath("../..")

[node name="ScheduledTaskList" type="VBoxContainer" parent="MiseryManager/MainLayout/Schedule" node_paths=PackedStringArray("misery_manager")]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 86.0
offset_top = 153.0
offset_right = -82.0
offset_bottom = -97.0
theme_override_constants/separation = 0
script = ExtResource("6_44pg8")
task_slot_scene = ExtResource("7_omno3")
task_scene = ExtResource("6_ekk6s")
SLOT_PADDING = 13
misery_manager = NodePath("../../..")

[node name="SubmitButton" type="Button" parent="MiseryManager/MainLayout/Schedule"]
layout_mode = 0
offset_left = 358.0
offset_top = 72.0
offset_right = 543.0
offset_bottom = 133.0
theme_override_fonts/font = ExtResource("2_ataua")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_dg7h3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7ucjv")
theme_override_styles/hover = SubResource("StyleBoxFlat_0ltho")
text = "SUBMIT"
script = ExtResource("11_0ltho")

[node name="Tasks" type="Control" parent="MiseryManager/MainLayout"]
custom_minimum_size = Vector2(510, 0)
layout_mode = 2
size_flags_vertical = 0

[node name="TasksContainer" type="FlowContainer" parent="MiseryManager/MainLayout/Tasks" node_paths=PackedStringArray("misery_manager")]
layout_mode = 1
anchors_preset = -1
offset_left = -1.0
offset_top = 127.0
offset_right = 509.0
offset_bottom = 801.0
size_flags_vertical = 4
theme_override_constants/v_separation = 10
script = ExtResource("6_mksl1")
count = 12
task_scene = ExtResource("6_ekk6s")
misery_manager = NodePath("../../..")

[node name="taskBar" parent="MiseryManager" instance=ExtResource("7_fne2n")]
layout_mode = 1
offset_left = -4.0
offset_top = -83.0
offset_right = -8.0
offset_bottom = -1.0
